# Ferret

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/chat/: handler.rs  mod.rs  stream.rs
src/ollama/: client.rs  mod.rs  types.rs
src/routes/: chat.rs  clear.rs  health.rs  index.rs  mod.rs
src/session/: manager.rs  mod.rs  types.rs
src/tools/: executor.rs  fetch.rs  mod.rs  parser.rs  search.rs
static/: style.css
templates/: index.html
