[package]
name = "ferret"
version = "0.1.0"
edition = "2021"
description = "A small but eager chatbot with web search capabilities"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Session management
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Tool parsing
regex = "1"
lazy_static = "1"

# HTML to text (for page fetching)
scraper = "0.21"
